# platform-v2

./: .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.server.yml  docker-compose.yml  release-notes.md  version.json
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
bins/csudo/src/: main.rs
bins/mock-subtensor/: Dockerfile
bins/mock-subtensor/src/: chain.rs  jsonrpc.rs  websocket.rs
bins/platform/: Cargo.toml
bins/platform-cli/src/: main.rs
bins/platform-sudo/: Cargo.toml
bins/platform-sudo/src/: main.rs
bins/platform/src/: server.rs
bins/utils/src/: main.rs
bins/validator-node/: Cargo.toml
bins/validator-node/src/: challenge_storage.rs  main.rs  wasm_challenge.rs  wasm_executor.rs
challenges/: README.md
challenges/term-challenge/: Cargo.toml
challenges/term-challenge-wasm/: Cargo.toml
challenges/term-challenge-wasm/src/: dataset.rs  evaluation.rs  lib.rs  scoring.rs  tasks.rs  types.rs
challenges/term-challenge/src/: evaluation.rs  lib.rs  routes.rs  scoring.rs  types.rs
coverage-html/html/: index.html
crates/bittensor-integration/src/: client.rs  lib.rs  storage.rs  validator_sync.rs  weights.rs
crates/challenge-loader/: Cargo.toml
crates/challenge-loader/src/: discovery.rs  error.rs  lib.rs  loader.rs  registry.rs  versioning.rs
crates/challenge-orchestrator/: Cargo.toml
crates/challenge-orchestrator/src/: backend.rs  config.rs  continuous.rs  docker.rs  evaluator.rs  health.rs  lib.rs  lifecycle.rs
crates/challenge-registry/: Cargo.toml
crates/challenge-registry/src/: discovery.rs  error.rs  health.rs  lifecycle.rs  migration.rs  registry.rs  version.rs
crates/challenge-runtime/src/: docker_runner.rs  integration_test.rs  runtime.rs
crates/challenge-sdk-wasm/: Cargo.toml
crates/challenge-sdk-wasm/src/: alloc_impl.rs  error.rs  host_functions.rs  lib.rs  term_types.rs  types.rs
crates/challenge-sdk/src/: database.rs  decentralized.rs  lib.rs  p2p.rs  p2p_chain_storage.rs  p2p_client.rs  routes.rs  server.rs  test_challenge.rs  weights.rs
crates/consensus/src/: pbft.rs  stake_governance.rs
crates/core/: Cargo.toml
crates/core/src/: challenge.rs  checkpoint.rs  crypto.rs  lib.rs  message.rs  restoration.rs  schema_guard.rs  state.rs  state_versioning.rs  term_challenge.rs  types.rs
crates/distributed-db/: Cargo.toml
crates/distributed-db/src/: lib.rs  storage.rs  sync.rs
crates/distributed-storage/src/: error.rs  lib.rs  local.rs  replication.rs  state_consensus.rs  validated_storage.rs
crates/epoch/src/: aggregator.rs  commit_reveal.rs  lib.rs  manager.rs  mechanism_weights.rs
crates/network/src/: behaviour.rs  node.rs
crates/p2p-consensus/: Cargo.toml
crates/p2p-consensus/src/: assignment.rs  config.rs  consensus.rs  fast_consensus.rs  lib.rs  messages.rs  network.rs  state.rs  validator.rs
crates/platform-server/: Cargo.toml
crates/platform-server/src/: data_api.rs  lib.rs  main.rs  observability.rs  orchestration.rs  state.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: auth.rs  handlers.rs  health.rs  jsonrpc.rs  server.rs  types.rs
crates/secure-container-runtime/: Cargo.toml  SECURITY_ANALYSIS.md
crates/secure-container-runtime/src/: broker.rs  client.rs  lib.rs  policy.rs  protocol.rs  types.rs  ws_client.rs  ws_transport.rs
crates/secure-container-runtime/tests/: integration_tests.rs
crates/storage/src/: blockchain.rs  distributed.rs  dynamic.rs  lib.rs  metadata.rs  migration.rs  types.rs
crates/subnet-manager/src/: commands.rs  config.rs  health.rs  recovery.rs  snapshot.rs  update.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime-interface/: Cargo.toml
crates/wasm-runtime-interface/src/: bridge.rs  consensus.rs  container.rs  data.rs  (+7 more)
crates/wasm-runtime/src/: error.rs  host_functions.rs  lib.rs  module.rs  runtime.rs  sandbox.rs
docker/: Dockerfile.bootnode  Dockerfile.validator  docker-compose.yml  entrypoint-bootnode.sh  entrypoint.sh
docs/: architecture.md  challenge-integration.md  challenges.md  security.md  validator.md  validator_wasm_audit.md
docs/operations/: validator.md
scripts/: build-wasm.sh  test-all.sh  test-comprehensive.sh  verify-nightly-config.sh
tests/: Cargo.toml  blockchain_state_tests.rs  checkpoint_tests.rs  e2e_test.rs  sudo_action_tests.rs  wasm_challenge_tests.rs
tests/docker/: Dockerfile.test-validator  docker-compose.multi-validator.yml  entrypoint-test.sh  test-multi-validator.sh
(+250 files in other folders)
