[package]
name = "platform-sudo"
version.workspace = true
edition.workspace = true
description = "Platform Sudo CLI — manage challenges as subnet owner"

[[bin]]
name = "platform-sudo"
path = "src/main.rs"

[dependencies]
platform-core = { path = "../../crates/core" }
platform-p2p-consensus = { path = "../../crates/p2p-consensus" }
clap = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
base64 = "0.21"
hex = { workspace = true }
sp-core = { workspace = true }
rustyline = "14"
