[package]
name = "term-challenge-wasm"
version = "0.2.3"
edition = "2021"
description = "WASM adapter for term-challenge v2 evaluation logic"
authors = ["Platform Network"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
platform-challenge-sdk-wasm = { path = "../../crates/challenge-sdk-wasm" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }
