[package]
name = "term-challenge-wasm"
version.workspace = true
edition.workspace = true
description = "Terminal Benchmark Challenge ported to WASM (wasm32-unknown-unknown)"

[lib]
crate-type = ["cdylib"]

[dependencies]
platform-challenge-sdk-wasm = { path = "../../crates/challenge-sdk-wasm" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }
