[package]
name = "platform-challenge-sdk-wasm"
version.workspace = true
edition.workspace = true
description = "WASM Guest SDK for building challenges targeting wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }
